plugins {
    id 'java'
}

group 'com.gk'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.10

repositories {
    mavenCentral()
}

dependencies {
    compile 'com.googlecode.lanterna:lanterna:3.0.1'
    compile 'org.projectlombok:lombok:1.18.2'
    testCompile 'junit:junit:4.12'
    testCompile 'org.mockito:mockito-core:2.22.0'
}
